headers += \
	base/allocate.h \
	base/common.h \
	base/constants.h \
	base/finish.h \
	base/heartbeat.h \
	base/hnp_request_wrapper.h \
	base/launch.h \
	base/register.h \
	base/net_utils.h \
	base/str_utils.h
	
libhamster_common_la_SOURCES += \
	$(headers) \
	base/allocate.c \
	base/common.c \
	base/finish.c \
	base/heartbeat.c \
	base/hnp_request_wrapper.c \
	base/launch.c \
	base/register.c \
	base/net_utils.c \
	base/str_utils.c \
	base/hdclient.c
